--- a/MarkdownViewer/packages.config
+++ b/MarkdownViewer/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ColorCode.Portable" version="1.0.3" targetFramework="net452" />
+  <package id="Jurassic" version="3.0.0" targetFramework="net452" />
   <package id="Markdig" version="0.17.1" targetFramework="net452" />
 </packages>
